drkns 11.09.2017 20:45:30 +0100 - build 5027

1. 0003481: hlf: Текст может выравниваться не смотря на отсутствие <CtrlStartPosChar>

2. CtrlStartPosChar мог внезапно влиять на предыдущий абзац.

3. Экспериментально - поддержка TrueColor в hlf. Формат ([[T]FFFFFFFF][:[T]BBBBBBBB]) - тот же, что и в промпте.

drkns 09.09.2017 22:00:37 +0100 - build 5026

1. Записываем стек и для тех исключений, которые были пойманы и переброшены через exception_ptr.

2. Рефакторинг.

drkns 09.09.2017 17:32:31 +0100 - build 5025

1. 0003485: Exception при попытке просмотра некорректного? hlf

zg 03.09.2017 14:24:00 FLE Daylight Time - build 5024

1. при удалении выделения в неактивном редакторе, он перерисовывался поверх всех окон.

drkns 02.09.2017 20:59:58 +0100 - build 5023

1. 0003470: GetVHDInfo called even DRIVE_SHOW_TYPE is not set and even under XP where VHD API is not available

shmuel 02.09.2017 20:34:02 +0200 - build 5022

1. FileList::SetSortMode() - было чтение памяти за пределами массива.

drkns 02.09.2017 16:16:24 +0100 - build 5021

1. Уточнение 5020.1.

drkns 02.09.2017 15:38:54 +0100 - build 5020

1. Рефакторинг. Убран дублирующийся код и кое-что вынесено из common.hpp.

2. Используем IsProcessorFeaturePresent для определения отсутствия SSE2.

drkns 30.08.2017 20:44:52 +0100 - build 5019

1. Новые версии tinyxml2 и fmt.

2. Не прелоадим lua51.dll, если плагины отсутствуют в принципе.

svs 30.08.2017 14:14:51 +0300 - build 5018

1. SQLite 3.20.1

w17 30.08.2017 13:53:46 +0300 - build 5017

1. Уточнение+ 5015

w17 30.08.2017 13:19:19 +0300 - build 5016

1. Уточнение 5015

w17 30.08.2017 12:21:12 +0300 - build 5015

1. Preload %FARHOME%\legacy\lua51.dll if x86 CPU doesn't support SSE2.

drkns 26.08.2017 11:20:44 +0100 - build 5014

1. В макрофункции date творилась дичь:
   Согласно документации, "%Z" должно было возвращать "Имя часового пояса или пусто, если часовой пояс не задан".