@@ -1,3 +1,7 @@
+drkns 12.09.2017 21:04:02 +0100 - build 5028
+
+1. Продолжение 0003481.
+
 drkns 11.09.2017 20:45:30 +0100 - build 5027
 
 1. 0003481: hlf: Текст может выравниваться не смотря на отсутствие <CtrlStartPosChar>
